# nd2handling

./: README.md  example_generated_spreadsheet.xlsx  nd2_handling2_readme.ipynb  nd2_handling_readme.ipynb  pyproject.toml  requirements.txt  setup.py
nd2handling/: nd2_handling2.py  nd2handling.py
